--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,5 @@
 version: "3.8"
+
 services:
   ollama:
     image: ollama/ollama:latest
@@ -8,25 +9,34 @@ services:
     volumes:
       - ollama_data:/root/.ollama
     environment:
-      - OLLAMA_MODELS=hf.co/bartowski/Llama-3.2-1B-Instruct-GGUF
+      - OLLAMA_MODELS=${OLLAMA_MODEL}
+    command: >
+      bash -c "
+        ollama pull ${OLLAMA_MODEL} &&
+        ollama serve
+      "
+    restart: unless-stopped
+
+  crypto-news-pipe:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: crypto-news-pipe
+    working_dir: /app
+    volumes:
+      - .:/app
+    env_file:
+      - .env
+    depends_on:
+      ollama:
+        condition: service_started
     restart: unless-stopped
     command: >
       bash -c "
-        ollama pull hf.co/bartowski/Llama-3.2-1B-Instruct-GGUF &&
-        ollama serve
+        sleep 5 &&
+        python main.py
       "
-
-  crypto-news-pipe:
-    build: .
-    container_name: crypto-news-pipe
-    volumes:
-      - .:/app
-    environment:
-      - PYTHONUNBUFFERED=1
-      - OLLAMA_BASE_URL=http://ollama:11434
-    depends_on:
-      - ollama
-    restart: unless-stopped
 
 volumes:
   ollama_data:
+    driver: local
