--- a/requirements.prod.txt
+++ b/requirements.prod.txt
@@ -1,3 +1,5 @@
+# Production requirements - CPU-only optimized version
+# Core dependencies for crypto news processing
 annotated-types==0.7.0
 anyio==4.10.0
 APScheduler==3.11.0
@@ -6,14 +8,13 @@ certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.3.0
 cssselect==1.3.0
-dotenv==0.9.9
+python-dotenv==1.1.1
 feedfinder2==0.0.4
 feedparser==6.0.12
 filelock==3.19.1
 fsspec==2025.9.0
 greenlet==3.2.4
 h11==0.16.0
-hf-xet==1.1.10
 httpcore==1.0.9
 httpx==0.28.1
 huggingface-hub==0.35.0
@@ -31,25 +32,10 @@ langsmith==0.4.29
 lxml==6.0.1
 lxml_html_clean==0.4.2
 MarkupSafe==3.0.2
-mpmath==1.3.0
 networkx==3.5
 newspaper3k==0.2.8
 nltk==3.9.1
 numpy==2.3.3
-nvidia-cublas-cu12==12.8.4.1
-nvidia-cuda-cupti-cu12==12.8.90
-nvidia-cuda-nvrtc-cu12==12.8.93
-nvidia-cuda-runtime-cu12==12.8.90
-nvidia-cudnn-cu12==9.10.2.21
-nvidia-cufft-cu12==11.3.3.83
-nvidia-cufile-cu12==1.13.1.3
-nvidia-curand-cu12==10.3.9.90
-nvidia-cusolver-cu12==11.7.3.90
-nvidia-cusparse-cu12==12.5.8.93
-nvidia-cusparselt-cu12==0.7.1
-nvidia-nccl-cu12==2.27.3
-nvidia-nvjitlink-cu12==12.8.93
-nvidia-nvtx-cu12==12.8.90
 oauthlib==3.3.1
 ollama==0.6.0
 orjson==3.11.3
@@ -59,7 +45,6 @@ psutil==5.9.8
 pydantic==2.11.9
 pydantic_core==2.33.2
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
 PyYAML==6.0.2
 regex==2025.9.18
 requests==2.32.5
@@ -75,16 +60,16 @@ six==1.17.0
 sniffio==1.3.1
 soupsieve==2.8
 SQLAlchemy==2.0.43
-sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
 tinysegmenter==0.3
 tldextract==5.3.0
 tokenizers==0.22.0
-torch==2.8.0
+# CPU-only PyTorch - much smaller than GPU version (500MB vs 6GB)
+torch==2.8.0 --extra-index-url https://download.pytorch.org/whl/cpu
 tqdm==4.67.1
+# Lightweight transformers without heavy dependencies
 transformers==4.56.1
-triton==3.4.0
 tweepy==4.16.0
 typing-inspection==0.4.1
 typing_extensions==4.15.0
